# fnd-suspension-baseline

./: .gitignore  CITATION.cff  LICENCE  README.md  codemeta.json  pyproject.toml
.github/workflows/: ci.yml
archive/: README.md
docs/: conventions.md  deliverable-index.md  delta_shell_calibration.md  experimental-envelope.md  findings-physics.md  findings-process.md  index.html  program-context.md  recon-d-pc-1-staffing.md  tokens.css  tutorial-roadmap.md  work-plan-v0-2-1.md  work-plan-v0-2.md  work-plan-v0-3.md  work-plan-v0-4.md
docs/adr/: 0001-v0.2-spec-anchoring.md  0002-v0.3-spec-anchoring.md  0003-v0.4-spec-anchoring.md  README.md
docs/release-notes/: v0.2.md  v0.3.md  v0.4.md
lab_notes/: 2026-04-27-phase1-parameters-and-water-properties.md  2026-04-27-phase2-method-a-and-notebook-01.md  2026-04-27-phase3-1-review-driven-fixes.md  2026-04-27-phase3-2-architecture-polish.md  2026-04-27-phase3-method-b-langevin.md  2026-04-27-phase4-1-review-driven-fixes.md  2026-04-27-phase4-method-c-smoluchowski.md  2026-04-27-phase5-1-review-driven-fixes.md  2026-04-27-phase5-regime-map-orchestration.md  2026-04-27-phase6-grid-cache-and-notebook-02.md  2026-04-27-phase7-parameter-scans-and-design-table.md  2026-04-27-review-fixes.md  2026-04-27-scaffold.md  2026-04-28-phase10-v0-2-scoping.md  2026-04-28-phase7-1-review-driven-fixes.md  2026-04-28-phase8-1-post-release-doc-fixes.md  2026-04-28-phase8-pilot-v0-1-release.md  2026-04-28-phase9-1-findings-corrections.md  2026-04-28-phase9-2-arithmetic-and-wording-fixes.md  2026-04-28-phase9-3-adversarial-review-fixes.md  2026-04-28-phase9-findings-narrative.md  2026-04-29-phase11-1-review-fixes.md  2026-04-29-phase11-rayleigh-convection-gate.md  2026-04-29-phase12-physics-propagation.md  2026-04-29-phase12-radius-schema-parser.md  2026-04-30-phase12-1-regression-audit.md  2026-04-30-phase13-cache-regeneration.md  2026-04-30-phase14-polydispersity-smearing.md  2026-04-30-phase15-pilot-v0-2-release.md  2026-04-30-phase16-1-defer-doi-to-v1-0.md  2026-04-30-phase16-2-v0-3-deliberation-surfaces.md  2026-04-30-phase16-3-program-context.md  2026-04-30-phase16-fair-metadata-and-v0-2-closeout.md  2026-04-30-phase17-continuation-contract-acceptance.md  2026-04-30-phase17-opening-adr-0002-and-work-plan-v0-3.md  2026-05-01-phase18-s2-stokes-einstein-corrections.md  2026-05-01-phase19-audit-gap-pins-and-parallel-walk.md  2026-05-01-phase20-continuous-thresholds.md  2026-05-01-phase21-mesh-convergence-and-shell-calibration.md  2026-05-01-phase22-continuous-time-evolution.md  (+15 more)
notebooks/: 01_baseline_validation.py  02_regime_map.py  03_parameter_scans.py  04_design_table.py  05_polydispersity_smearing.py  06_lambda_se_audit.py  07_mesh_convergence_audit.py  08_time_evolution_design_table.py  09_integration_audit.py
notebooks/data/: README.md  design_table_max_homogeneous_r.csv  design_table_min_sedimented_r.csv  design_table_polydispersity_room_T.csv  design_table_polydispersity_room_T.md  design_table_room_T.md  regime_map_grid.csv
notebooks/data/schemas/: design_table_max_homogeneous_r.schema.json  (+3 more)
notebooks/tutorials/: 01_quick_start_regime_map.ipynb  01_quick_start_regime_map.py  02_geometry_and_shell_calibration.ipynb  02_geometry_and_shell_calibration.py  03_polydispersity_intuition.ipynb  03_polydispersity_intuition.py  04_time_and_parameter_crossings.ipynb  04_time_and_parameter_crossings.py  05_experimental_envelope.ipynb  05_experimental_envelope.py  06_cache_explorer.ipynb  06_cache_explorer.py  README.md
src/: analytical.py  continuous_thresholds.py  convection.py  fokker_planck.py  langevin.py  parameters.py  polydispersity.py  regime_map.py  scan_grid.py  stokes_einstein_correction.py  time_evolution.py
tests/: test_analytical.py  test_continuous_thresholds.py  test_convection.py  test_data_schemas.py  test_einstein_relation.py  test_equilibrium.py  test_hydrodynamic_split.py  test_langevin.py  test_method_consistency.py  test_polydispersity.py  test_regime_map.py  test_scan_grid.py  test_stokes_einstein_correction.py  test_time_evolution.py  test_water_properties.py
